--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
+BEI_TICKERS_FILE=data/bei_tickers.txt
+# Optional URL if you want to fetch tickers from a remote CSV/JSON endpoint.
+BEI_TICKERS_URL=
+BEI_TICKERS_URL_TOKEN=
+POLL_INTERVAL_SECONDS=15
+YFINANCE_SUFFIX=.JK
